# uav-px4-offboard

./: 10050_gazebo-classic_my_vehicle  README.md
scripts/: config_px4.sh  setup_firmware.sh  setup_requirements.sh
src/: uav_log.csv  uav_plot.py
src/px4_msgs/: CMakeLists.txt  package.xml
src/uav_control/: CMakeLists.txt  package.xml
src/uav_control/include/: control.h  planning.h
src/uav_control/launch/: uav_control.launch.py
src/uav_control/src/: control.cpp  planning.cpp
